syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderQuoteProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Quote
message QuoteFlatData {
    option (routines.entity_type) = "Quote";
    option (routines.keys).keys = "quote_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: quoteId
    string quote_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string quote_type_id = 2 [(routines.opts).field_type = "id"];
    string party_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp issue_date = 4 [(routines.opts).field_type = "date-time"];
    string status_id = 5 [(routines.opts).field_type = "id"];
    string currency_uom_id = 6 [(routines.opts).field_type = "id"];
    string product_store_id = 7 [(routines.opts).field_type = "id"];
    string sales_channel_enum_id = 8 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp valid_from_date = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp valid_thru_date = 10 [(routines.opts).field_type = "date-time"];
    string quote_name = 11 [(routines.opts).field_type = "name"];
    string description = 12 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 13 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 14 [(routines.opts).field_type = "date-time"];
    string tenant_id = 15 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 34;
    map<string, google.protobuf.Any> attachments = 35 ;
}

message QuoteKey{
    string quote_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message QuoteList{
    repeated QuoteFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListQuotes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Quote Adjustment
message QuoteAdjustmentFlatData {
    option (routines.entity_type) = "QuoteAdjustment";
    option (routines.keys).keys = "quote_adjustment_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: quoteAdjustmentId
    string quote_adjustment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string quote_adjustment_type_id = 2 [(routines.opts).field_type = "id"];
    string quote_id = 3 [(routines.opts).field_type = "id"];
    string quote_item_seq_id = 4 [(routines.opts).field_type = "id"];
    string comments = 5 [(routines.opts).field_type = "comment"];
    string description = 6 [(routines.opts).field_type = "description"];
    routines.Currency amount = 7 [(routines.opts).field_type = "currency-amount"];
    string product_promo_id = 8 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 9 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 10 [(routines.opts).field_type = "id"];
    string product_feature_id = 11 [(routines.opts).field_type = "id"];
    string corresponding_product_id = 12 [(routines.opts).field_type = "id"];
    string source_reference_id = 13 [(routines.opts).field_type = "id-long"];
    routines.FixedPoint source_percentage = 14 [(routines.opts).field_type = "fixed-point"];
    string customer_reference_id = 15 [(routines.opts).field_type = "id-long"];
    string primary_geo_id = 16 [(routines.opts).field_type = "id"];
    string secondary_geo_id = 17 [(routines.opts).field_type = "id"];
    routines.Currency exempt_amount = 18 [(routines.opts).field_type = "currency-amount"];
    string tax_auth_geo_id = 19 [(routines.opts).field_type = "id"];
    string tax_auth_party_id = 20 [(routines.opts).field_type = "id"];
    string override_gl_account_id = 21 [(routines.opts).field_type = "id"];
    routines.Indicator include_in_tax = 22 [(routines.opts).field_type = "indicator"];
    routines.Indicator include_in_shipping = 23 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp created_date = 24 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 25 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 26 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 27 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 28 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 29 [(routines.opts).field_type = "date-time"];
    string tenant_id = 30 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 43;
    map<string, google.protobuf.Any> attachments = 44 ;
}

message QuoteAdjustmentKey{
    string quote_adjustment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message QuoteAdjustmentList{
    repeated QuoteAdjustmentFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListQuoteAdjustments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Quote Item
message QuoteItemData {
    option (routines.entity_type) = "QuoteItem";
    option (routines.keys).keys = "quote_id, quote_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: quoteId, quoteItemSeqId
    // fields
    string quote_id = 1 [(routines.opts).field_type = "id"];
    string quote_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    string product_feature_id = 4 [(routines.opts).field_type = "id"];
    string deliverable_type_id = 5 [(routines.opts).field_type = "id"];
    string skill_type_id = 6 [(routines.opts).field_type = "id"];
    string uom_id = 7 [(routines.opts).field_type = "id"];
    string work_effort_id = 8 [(routines.opts).field_type = "id"];
    string cust_request_id = 9 [(routines.opts).field_type = "id"];
    string cust_request_item_seq_id = 10 [(routines.opts).field_type = "id"];
    routines.FixedPoint quantity = 11 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint selected_amount = 12 [(routines.opts).field_type = "fixed-point"];
    routines.Currency quote_unit_price = 13 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp reserv_start = 14 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint reserv_length = 15 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_persons = 16 [(routines.opts).field_type = "fixed-point"];
    string config_id = 17 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp estimated_delivery_date = 18 [(routines.opts).field_type = "date-time"];
    string comments = 19 [(routines.opts).field_type = "comment"];
    routines.Indicator is_promo = 20 [(routines.opts).field_type = "indicator"];
    int64 lead_time_days = 21 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_updated_tx_stamp = 22 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 23 [(routines.opts).field_type = "date-time"];
    string id = 24 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 37;
    map<string, google.protobuf.Any> attachments = 38;
}


message QuoteItemKey{
    string quote_id = 1 [(routines.opts).field_type = "id"];
    string quote_item_seq_id = 2 [(routines.opts).field_type = "id"];
}

message QuoteItemList{
    repeated QuoteItemData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListQuoteItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Quote Role
message QuoteRoleData {
    option (routines.entity_type) = "QuoteRole";
    option (routines.keys).keys = "quote_id, party_id, role_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: quoteId, partyId, roleTypeId
    // fields
    string quote_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message QuoteRoleKey{
    string quote_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
}

message QuoteRoleList{
    repeated QuoteRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListQuoteRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Quote Term
message QuoteTermData {
    option (routines.entity_type) = "QuoteTerm";
    option (routines.keys).keys = "term_type_id, quote_id, quote_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: termTypeId, quoteId, quoteItemSeqId
    // fields
    string term_type_id = 1 [(routines.opts).field_type = "id"];
    string quote_id = 2 [(routines.opts).field_type = "id"];
    string quote_item_seq_id = 3 [(routines.opts).field_type = "id"];
    int64 term_value = 4 [(routines.opts).field_type = "numeric"];
    string uom_id = 5 [(routines.opts).field_type = "id"];
    int64 term_days = 6 [(routines.opts).field_type = "numeric"];
    string text_value = 7 [(routines.opts).field_type = "description"];
    string description = 8 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message QuoteTermKey{
    string term_type_id = 1 [(routines.opts).field_type = "id"];
    string quote_id = 2 [(routines.opts).field_type = "id"];
    string quote_item_seq_id = 3 [(routines.opts).field_type = "id"];
}

message QuoteTermList{
    repeated QuoteTermData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListQuoteTerms` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


